# sd-async-inference

./: .gitignore  .gitignore.swp  README.md  README.zh-CN.md  README_en.md
cdk/: .gitignore  README.md  README.zh-CN.md  cdk.json  deploy.sh  destroy.sh  fix-vulnerabilities.sh  list-deployments.sh  node-version-check.sh  package-lock.json  package.json  setup-node.sh  update.sh
cdk/lib/: sd-inference-stack.ts  user-data.sh
cdk/scripts/: build-and-push-image.sh  check-deployment-status.sh  deploy-new-version.sh  rollback.sh  update-image-version.ts
docs/: ec2-deployment.md
server/: README.md
server/api-scheduler/: Dockerfile  README.md  README.zh-CN.md  conf.ini  conf.ini.example  conf.template.ini  main.py  pyproject.toml  sd_api.py  sd_dynamodb.py  sd_s3.py  sd_task_detail.py  sqs.py  supervisor.ini
server/api-scheduler/deploy/supervisord/: api-scheduler.ini  stablediffusion-webui.ini  supervisord.conf
server/api-scheduler/docs/: deployment-guide.md  deployment-guide.zh-CN.md
server/api-scheduler/scheduler/: api_server.py  conf.py  health_check.py  sd_task_detail.py  sqs.py
server/deploy/supervisord/: api-scheduler.ini
server/lambda/combined_task_handler/: README.md  deploy.sh  index.mjs  package.json  test.sh  update-api-gateway.sh
server/lambda/submit_task/: README.md  index.mjs  package-lock.json  package.json
server/lambda/task_handler/: README.md  index.mjs  package-lock.json  package.json
server/lambda/task_info/: README.md  index.mjs  package-lock.json  package.json
server/scheduler/: README.md  conf.ini
(+5 files in other folders)
